# MatteOS

./: .clang-format  .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  Doxyfile  Makefile  README.md  asdf.txt  asf.txt  build.ninja  build.sh  config.toml  kernel.its  project.toml
docs/: device-tree-example.dts  device-tree.dts
scripts/: allowed_symbols.txt  build.py  build_image.sh  build_opensbi.sh  build_uboot.sh  generate_kernel_symbols.py  qemu.txt  run_qemu.sh
src/Kernel/: CMakeLists.txt  CPU.cpp  CPU.h  CPU.hh  Forwards.h  Init.cpp  Logger.cpp  Logger.h  Page.cpp  Page.hh  PageController.cpp  PageController.hh  PageTable.cpp  PageTable.hh  PageTableEntry.cpp  PageTableEntry.hh  Paging.cpp  Paging.hh  PagingTable.cpp  PagingTable.hh  PhysicalAddress.hh  Plic.cpp  Plic.hh  Process.cpp  Process.hh  ProcessController.cpp  ProcessController.hh  Satp.h  Satp.hh  Trap.cpp  Trap.hh  TrapFrame.hh  Uart.cpp  Uart.h  Uart.hh  VirtualAddress.hh  VirtualMemory.cpp  VirtualMemory.hh
src/Kernel/API/: KernelSymbols.h  Syscall.h  SyscallString.h
src/Kernel/API/Module/: DriverAPI.cpp  DriverAPI.h  Module.h
src/Kernel/Arch/: Interrupts.h  PIC.h  PLIC.h  RegisterOffset.h
src/Kernel/Arch/riscv/: CPU.cpp  CPU.h  boot.S  trap.S
src/Kernel/Arch/riscv/Interrupts/: Plic.cpp  Plic.h
src/Kernel/Arch/riscv64/: CPU.cpp  CPU.h  CSR.h  RegisterOffset.h  Satp.h  boot.S  mem.S  trap.S
src/Kernel/Arch/riscv64/Interrupts/: Interrupts.cpp  Interrupts.h  Plic.cpp  Plic.h
src/Kernel/Devices/: AsyncRequest.cpp  AsyncRequest.h  BlockDevice.cpp  BlockDevice.h  ConsoleDevice.cpp  ConsoleDevice.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  EntropyDevice.cpp  EntropyDevice.h
src/Kernel/Devices/Console/: ConsoleDevice.cpp  ConsoleDevice.h
src/Kernel/Devices/Entropy/: EntropyDevice.cpp  EntropyDevice.h
src/Kernel/Devices/Storage/: BlockDevice.cpp  BlockDevice.h
src/Kernel/Drivers/: DeviceDriver.cpp  DeviceDriver.h  Driver.cpp  Driver.h  DriverManager.cpp  DriverManager.h  MMIODriver.cpp  MMIODriver.h
src/Kernel/Drivers/Console/: ConsoleDeviceDriver.cpp  ConsoleDeviceDriver.h  NS16550ADriver.cpp  NS16550ADriver.h
src/Kernel/Drivers/Storage/: BlockDeviceDriver.h
src/Kernel/Drivers/Storage/VirtIO/: BlockIODriver.cpp  BlockIODriver.h
src/Kernel/Drivers/VirtIO/: BlockIO.cpp  BlockIO.h  BlockIODriver.cpp  BlockIODriver.h  MMIODevice.h  MMIODeviceRegisterLayout.h  VirtIODeviceIDs.cpp  VirtIODeviceIDs.h  VirtIODriver.cpp  VirtIODriver.h  VirtQueue.cpp  VirtQueue.h
src/Kernel/FileSystem/: AccessPrivileges.h  BlockBackedFileSystem.cpp  BlockBackedFileSystem.h  File.cpp  File.h  FileDescriptor.cpp  FileDescriptor.h  FileDescriptorTable.cpp  FileDescriptorTable.h  FileOpenMode.h  FileSystem.cpp  FileSystem.h  Inode.cpp  Inode.h  OpenFileDescriptor.cpp  OpenFileDescriptor.h  VirtualFileSystem.cpp  VirtualFileSystem.h
src/Kernel/FileSystem/DEVFS/: DevFileSystem.cpp  DevFileSystem.h  DevInode.cpp  DevInode.h
src/Kernel/FileSystem/FATFS/: FAT.h  FATFileSystem.cpp  FATFileSystem.h  FATInode.cpp  FATInode.h
src/Kernel/FileSystem/RAMFS/: RamFileSystem.cpp  RamFileSystem.h  RamInode.cpp  RamInode.h
src/Kernel/Firmware/: DeviceTree.cpp  DeviceTree.h
src/Kernel/Firmware/FDT/: FDT.h  FDTParser.cpp  FDTParser.h  fdt.h
src/Kernel/Locking/: Locked.h
src/Kernel/Memory/: KernelMemoryAllocator.cpp  KernelMemoryAllocator.h  MemoryManager.cpp  MemoryManager.h  MemoryRegion.cpp  MemoryRegion.h  Page.cpp  Page.h  PageTable.cpp  PageTable.h  PageTableEntry.cpp  PageTableEntry.h  PhysicalAddress.h  VirtualAddress.h
src/Kernel/Memory/VirtualMemory/: AddressSpace.cpp  AddressSpace.h  MemoryRegion.cpp  MemoryRegion.h  PhysicalPage.cpp  PhysicalPage.h  VMObject.cpp  VMObject.h
src/Kernel/Proccess/: ProcessManager.cpp  ProcessManager.h
src/Kernel/Process/: Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h  Request.h  Scheduler.cpp  Scheduler.h  Thread.cpp  Thread.h  Userspace.h
src/Kernel/Process/Console/: Console.cpp  Console.h
src/Kernel/Process/Loader/: ELF.h  ELFDefs.h  Loader.cpp  Loader.h
src/Kernel/SBI/: SBI.cpp  SBI.h
src/Kernel/Sbi/: sbi.cpp  sbi.h
src/Kernel/Security/: Credentials.h
src/Kernel/Syscalls/: SyscallDebug.cpp  SyscallFile.cpp  SyscallManager.cpp  SyscallManager.h  SyscallOpen.cpp  SyscallProcess.cpp  SyscallStatistics.cpp  SyscallStatistics.h
src/Kernel/System/: DeviceManager.cpp  DeviceManager.h  DriverManager.cpp  DriverManager.h  InterruptManager.cpp  InterruptManager.h  KernelTrapFrame.h  Plic.cpp  Plic.h  Plic.hh  SyscallManager.cpp  SyscallManager.h  System.cpp  System.h  Timer.cpp  Timer.h  Trap.cpp  Trap.h  Trap.hh  TrapFrame.h  TrapFrame.hh
src/Kernel/VirtIO/: BlockIO.cpp  BlockIO.h  MMIODevice.h  MMIODeviceRegisterLayout.h  VirtIODeviceIDs.cpp  VirtIODeviceIDs.h  VirtQueue.cpp  VirtQueue.h
src/Kernel/sbi/: sbi.cpp  sbi.hh
src/Userland/Modules/: CMakeLists.txt  linker.ld  module.ld
src/Userland/Modules/TestModule/: CMakeLists.txt  Module.cpp
src/Utils/: Assertions.cpp  Assertions.h  Basic.cpp  Basic.h  Basic.hh  CMakeLists.txt  Callable.h  DebugConsole.cpp  DebugConsole.h  DebugConsole.hh  Endian.h  Forwards.h  Function.h  Math.cpp  Math.h  Memory.cpp  Memory.h  Memory.hh  OldFunction.h  Option.cpp  Option.hh  Optional.cpp  Optional.h  Optional.hh  Pair.h  String.cpp  String.hh  Traits.h  Types.cpp  Types.h  Types.hh  Utility.h  Variant.h  cxx.cpp  kmalloc.cpp  kmalloc.h
src/Utils/Arrays/: Array.h  ArrayList.cpp  ArrayList.h  CircularStringBuffer.cpp  CircularStringBuffer.h  LinkedList.h  Queue.h  SharedArray.h
src/Utils/Errors/: ErrorOr.h
src/Utils/Events/: Observable.h
src/Utils/Hashing/: HashFunctions.cpp  HashFunctions.h
src/Utils/Lock/: Lock.cpp  Lock.h
src/Utils/Locks/: Lock.h  Locked.h
src/Utils/Maps/: HashMap.h  Map.h
src/Utils/Pointers/: RefCounted.h  RefPtr.h  Shared.h  Unique.h
src/Utils/Strings/: Character.cpp  Character.h  Formatter.cpp  Formatter.h  String.cpp  String.h  StringBuilder.cpp  StringBuilder.h  StringImpl.cpp  StringImpl.h  StringValue.cpp  StringValue.h
(+34 files in other folders)
